# master

./: DefaultApp.hs  Fortune.hs  GDiff.hs  HWT8.hs  Hallo.hs  HalloTextfield.hs  README  Server.hs  gclTest.html  hwt.cabal  hwt.hs  hwt8.hs  hwt8.js
doc/: value konzept.odg  values.odt  wmsvp.hs
genericdiffmap/: genericdiffmap.cabal
genericdiffmap/Data/: GenericDiffMap.hs
genericdiffmap/Data/GenericDiffMap/: Core.hs  Tests.hs
hwt/: hwt.cabal
hwt/HWT/: Core.hs  Server.hs  Tests.hs  Types.hs
hwt/static/: hwt.js
src/Data/: GenericDiffMap.hs
src/Data/GenericDiffMap/: Core.hs  Projection.hs
src/HWT/: Core.hs  Server.hs  Session.hs  Tests.hs  Types.hs
src/static/: hwt.js
static/: hwt9.js
