Name:                hwt
Version:             0.1.0
Synopsis:            HWT
License:             AllRightsReserved
License-file:        LICENSE
Author:              Robert Steuck <robert.steuck@gmail.com>
Maintainer:          Robert Steuck <robert.steuck@gmail.com>
Category:            Web
Stability:           experimental
Build-type:          Simple

Cabal-version:       >=1.2

Library
  Exposed-modules:   HWT.Core
                     HWT.Types
                     HWT.Session
                     HWT.Server
                     HWT.Tests
  default-language:  Haskell2010
  Build-depends:     base,
                     mtl,
                     json,
                     containers,
                     MissingH,
                     stm-io-hooks,
                     random,
                     text,
                     genericdiffmap,
                     haskell98,
                     yesod == 0.9.4.1,
                     http-enumerator < 0.7.3,
                     tls-extra < 0.4.3,
                     shakespeare-text == 0.10.5,
                     yesod-static == 0.3.2.1,
                     enumerator == 0.4.18,
                     bytestring == 0.9.2.1,
                     warp == 0.4.6.3,
                     wai == 0.4.3

source-repository head
    type:      git
    location:  git://github.com/hqm42/master.git
